# PyGARTH

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  README.rst  appveyor.yml  build.sh  environment.yaml  execute_development.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
PyGARTH/: _version.py  cli.py
conda.recipe/: meta.yaml
docs/: conf.py  index.rst
pygarth/: __init__.py  __main__.py  __version__.py  cli.py  config_logger.py
sample_testsuite/: sample_code.py
sample_testsuite/inputs/: r_and_j.yaml
tests/: test_cli.py
tests/data/: pygarth.config.yaml  pygarth_config.yaml  sample_input.yaml
