[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyGARTH"
version = "0.0.1"
description = "A generic automated testing tool written in python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pygarth = "pygarth:main"
