[build-system]
requires = [
  "setuptools >= 75.0.0",
  "build >= 1.2.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "pygarth"
version = "0.0.1"
description = "A generic automated testing tool written in python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools"
]

[project.scripts]
pygarth = "pygarth:main"

[tool.setuptools.packages]
find = {}
